[백엔드] 프론트엔드 cookie, body, query, params 확인 Test API 작성
