# BackEnd/src/app/User/userController.js
@@ -48,9 +48,9 @@ exports.sendTokenToSMS = async (req, res) => {
 
     // console.log(result);
     // console.log(`token: ${tok}`);
-    res.send(response(baseResponseStatus.SUCCESS, { token: tok}));
+    res.send(response(baseResponseStatus.SUCCESS, { token: tok }));
   }
-  
+
 }
 
 // 템플릿 코드
@@ -62,9 +62,15 @@ exports.sendTokenToSMS = async (req, res) => {
  * API Name : 테스트 API
  * [GET] /app/test
  */
-exports.getTest = async function (req, res) {
-    return res.send(response(baseResponseStatus.SUCCESS))
+exports.getTest = async function(req, res) {
+  return res.send(response(baseResponseStatus.SUCCESS));
 }
+
+exports.frontTestAPI = async (req, res) => {
+  let { cookies, body, query, params } = req;
+
+  return res.status(200).send({ cookies, body, query, params });
+};
 
 /**
  * API No. 1
@@ -191,17 +197,17 @@ exports.getTest = async function (req, res) {
 // };
 
 // exports.kakaoCallback = async function (req, res) {
-    
+
 // }
 
-exports.addUser = function(newUser, callback){
-    bcrypt.genSalt(10, (err, salt) => {
-      bcrypt.hash(newUser.password, salt, (err, hash) => {
-        if(err) throw err;
-        newUser.password = hash;
-        newUser.save(callback);
-      });
+exports.addUser = function(newUser, callback) {
+  bcrypt.genSalt(10, (err, salt) => {
+    bcrypt.hash(newUser.password, salt, (err, hash) => {
+      if (err) throw err;
+      newUser.password = hash;
+      newUser.save(callback);
     });
+  });
 }
 
 
